Add icon circle style

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     </head>
     <body>
         <p>Hello world! This is HTML5 Boilerplate.</p>
+        <div class="icon-style">
+        <a href="facebook.com" class="icon-facebook"></a>
+        </div>
         <script src="js/index.js"></script>
     </body>
 </html>
