--- a/public/buttons.html
+++ b/public/buttons.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Crud Blog</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <a>Read More</a>
-        <script src="js/index.js"></script>
-    </body>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <title>Buttons</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <a class="btn btn__text btn--dark">Read More</a>
+    <a class="btn btn__text btn--light">Prev</a>
+    <a class="btn btn__text btn--theme">Contact Now</a>
+    <a class="btn btn__text btn--theme">Learn More</a>
+    <a class="btn btn__number btn--light">1</a>
+    <script src="js/index.js"></script>
+  </body>
 </html>
