--- a/public/icons.html
+++ b/public/icons.html
@@ -11,10 +11,10 @@
     <body>
         <a href="#" class="icon-menu"></a>
         <a href="https://plus.google.com/" class=" icon-style icon-google-plus"></a>
-        <a href="www.facebook.com" class="icon-style icon-facebook"></a>
-        <a href="www.twitter.com" class="icon-style icon-twitter"></a>
-        <a href="www.linkedin.com" class=" icon-style icon-linkedin"></a>
-        <a href="www.pinterest.com" class="icon-pinterest"></a>
+        <a href="http://www.facebook.com" class="icon-style icon-facebook"></a>
+        <a href="http://www.twitter.com" class="icon-style icon-twitter"></a>
+        <a href="http://www.linkedin.com" class=" icon-style icon-linkedin"></a>
+        <a href="http://www.pinterest.com" class="icon-pinterest"></a>
         <script src="js/index.js"></script>
     </body>
 </html>
