Fix footer tags and tabbing

--- a/public/footer.html
+++ b/public/footer.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <footer>
-    <p class="footer">&#169 Intelly LLC</p>
-    <ul class="footer__link">
-      <li>Terms of use</li>
-      <li>Privacy Policy </li>
-      <li>Contact</li>
-      <li>Support</li>
-    </ul>
-  </div>
+      <p class="footer">&#169 Intelly LLC</p>
+      <ul class="footer__link">
+        <li>Terms of use</li>
+        <li>Privacy Policy </li>
+        <li>Contact</li>
+        <li>Support</li>
+      </ul>
+    </footer>
   </body>
 </html>
 
