Add breakpoint mixin

--- a/public/contact.html
+++ b/public/contact.html
@@ -10,12 +10,12 @@
   </head>
   <body>
     <div class="contact">
-      <address class="contact--method">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</address>
-      <div class="contact--method">
+      <address class="contact__method">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</address>
+      <div class="contact__method">
         <a href="tel:6624076792">662-407-6792</a>
         <a href="mailto:contact@intell.com">contact@intell.com</a>
       </div>
-      <div class="contact--method">
+      <div class="contact__method">
         <a href="https://twitter.com/" class="connection-links connection-links__text">
           <span class="icon-twitter connection-links__icon"></span>Follow Us
         </a>
