Finish contact section with mostly flexbox

--- a/public/connection-links.html
+++ b/public/connection-links.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <a href="https://twitter.com/" class="connection-links connection-links__text">
-      <span class="icon-twitter connection-links__icon"></span>Follow Us
+      <span class="icon-twitter connection-links__icon"></span><span>Follow Us</span>
     </a>
     <a href="https://www.facebook.com/" class="connection-links connection-links__text">
       <span class="icon-facebook connection-links__icon"></span>Like Us
