--- a/public/contact.html
+++ b/public/contact.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="contact">
-      <address class="contact__method">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</address>
+      <address class="contact__method"><a href="https://goo.gl/maps/C4Q1FUpTdJx">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</a></address>
       <div class="contact__method">
         <a href="tel:6624076792">662-407-6792</a>
         <a href="mailto:contact@intell.com">contact@intell.com</a>
