Fix flex issue in footer

--- a/public/header.html
+++ b/public/header.html
@@ -9,7 +9,19 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <header>g
+    <header>
+      <section>
+        <h1>Intelly</h1>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Pages</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Shortcodes</a></li>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </section>
     </header>
   </body>
 </html>
