--- a/public/header.html
+++ b/public/header.html
@@ -11,18 +11,21 @@
   <body>
     <header>
       <section>
-        <h1>Intelly</h1>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Pages</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Shortcodes</a></li>
-          <li><a href="#">Features</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
+        <h1>intelly</h1>
+        <span class="icon-menu"></span>
+        <input type="checkbox" id="show-menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Pages</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Portfolio</a></li>
+            <li><a href="#">Shortcodes</a></li>
+            <li><a href="#">Features</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
       </section>
     </header>
-  </body>g
+  </body>
 </html>
 
