Add mobile nav responsiveness

--- a/public/header.html
+++ b/public/header.html
@@ -12,18 +12,28 @@
     <header>
       <section>
         <h1>intelly</h1>
-        <span class="icon-menu"></span>
-        <input type="checkbox" id="show-menu">
-          <ul>
+        <nav class="header__nav-show">
+          <label for="show-menu" class="show-menu">
+            <span class="icon-menu3"></span>
+          </label>
+          <input type="checkbox" id="show-menu">
+          <ul class="menu">
             <li><a href="#">Home</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Pages</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Blog</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Portfolio</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Shortcodes</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Features</a></li>
+            <li><span>.</span></li>
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
+        <h4>test</h4>
       </section>
     </header>
   </body>
