--- a/public/header.html
+++ b/public/header.html
@@ -12,12 +12,12 @@
     <header>
       <section>
         <h1>intelly</h1>
-        <nav class="header__nav-show">
-          <label for="show-menu" class="show-menu">
+        <nav>
+          <label for="show-menu">
             <span class="icon-menu3"></span>
           </label>
           <input type="checkbox" id="show-menu">
-          <ul class="menu">
+          <ul>
             <li><a href="#">Home</a></li>
             <li><span>.</span></li>
             <li><a href="#">Pages</a></li>
@@ -33,7 +33,6 @@
             <li><a href="#">Contact</a></li>
           </ul>
         </nav>
-        <h4>test</h4>
       </section>
     </header>
   </body>
