Apply tidy and lint fixes

--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
       </div>
     </section> <!-- ends contact -->
     <footer>
-      <p>&#169 Intelly LLC</p>
+      <p>&#169;Intelly LLC</p>
       <ul>
         <li>Terms of use</li>
         <li>Privacy Policy </li>
