Working angular require and webpack and Sass watch

--- a/public/index2.html
+++ b/public/index2.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div ng-controller="Controller">
-      <my-customer info="naomi"></my-customer>
+      <my-customer info="zach"></my-customer>
       <hr>
-      <my-customer info="igor"></my-customer>
+      <my-customer info="molly"></my-customer>
     </div>
     <!-- <article data-ng-controller="PreviewCtrl" data-ng-include="'post-preview.html'">
     </article> -->
