Reorg files. Make src directory. Make Previews component

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,9 @@
       </div>
     </nav>
     </section> <!-- end sec-nav -->
+    <section class="previews" ng-controller="PreviewCtrl">
+      <post-preview info="post"></post-preview>
+    </section>
     <section> <!-- feature-box -->
       <div class="feature-box">
         <h1>Serene in their assurance of their empire over matter</h1>
