--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,10 @@
         </ul>
       </nav>
     </header>
-    <section> <!-- hero-box -->
-      <div class="hero-box">
-        <h1>Blog</h1>
-        <p>The secular cooling that must someday overtake our planet has already gone far indeed with our neighbour. Its physical condition is still largely a mystery, but we know now that even in its equatorial</p>
-      </div>
-    </section> <!-- ends hero-box -->
-    <section> <!-- sec-nav -->
+    <section class="hero-box"> <!-- hero-box -->
+      <h1>Blog</h1>
+      <p>The secular cooling that must someday overtake our planet has already gone far indeed with our neighbour. Its physical condition is still largely a mystery, but we know now that even in its equatorial</p>
+    </section> <!-- ends hero-box --> <!-- sec-nav -->
       <nav class="secondary-nav">
       <div class="secondary-nav__justify-L">
         <a href="home.html">Home</a>
@@ -46,9 +43,7 @@
         <a href="https://plus.google.com/" class="icon-google-plus secondary-nav__icon"></a>
         <a href="http://www.pinterest.com" class="icon-pinterest secondary-nav__icon"></a>
       </div>
-    </nav>
-    </section> <!-- end sec-nav -->
-
+    </nav><!-- end sec-nav -->
     <section class="previews" data-ng-controller="PreviewCtrl">
       <article data-ng-repeat="item in items">
         <h1>{{item.title}}</h1>
@@ -63,35 +58,30 @@
         </div>
       </article>
     </section>
-    
-    <section> <!-- feature-box -->
-      <div class="feature-box">
-        <h1>Serene in their assurance of their empire over matter</h1>
-        <p>No one would have believed in the last years of the nineteenth century that this world was being watched keenly and closely by intelligences greater than man’s and yet as more</p>
-        <a class="btn btn__text btn--theme">Contact Now</a>
-        <a class="btn btn__text btn--theme">Learn More</a>
-      </div>
+    <section class="feature-box"> <!-- feature-box -->
+      <h1>Serene in their assurance of their empire over matter</h1>
+      <p>No one would have believed in the last years of the nineteenth century that this world was being watched keenly and closely by intelligences greater than man’s and yet as more</p>
+      <a class="btn btn__text btn--theme">Contact Now</a>
+      <a class="btn btn__text btn--theme">Learn More</a>
     </section> <!--  end feature-box -->
-    <section> <!-- cntact -->
-      <div class="contact">
-        <address class="contact__method"><a href="https://goo.gl/maps/C4Q1FUpTdJx">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</a></address>
-        <div class="contact__method">
-          <a href="tel:6624076792">662-407-6792</a>
-          <a href="mailto:contact@intell.com">contact@intell.com</a>
-        </div>
-        <div class="contact__method">
-          <a href="https://twitter.com/" class="connection-links connection-links__text">
-            <span class="icon-twitter connection-links__icon"></span>Follow Us
-          </a>
-          <a href="https://www.facebook.com/" class="connection-links connection-links__text">
-            <span class="icon-facebook connection-links__icon"></span>Like Us
-          </a>
-          <a href="https://www.linkedin.com/" class="connection-links connection-links__text">
-            <span class="icon-linkedin connection-links__icon"></span>Connect
-          </a>
-        </div>
+    <aside class="contact"> <!-- cntact -->
+      <address class="contact__method"><a href="https://goo.gl/maps/C4Q1FUpTdJx">2319 Hilltop Haven Drive<br />Upper Greenwood Lake, NJ 07421</a></address>
+      <div class="contact__method">
+        <a href="tel:6624076792">662-407-6792</a>
+        <a href="mailto:contact@intell.com">contact@intell.com</a>
       </div>
-    </section> <!-- ends contact -->
+      <div class="contact__method">
+        <a href="https://twitter.com/" class="connection-links connection-links__text">
+          <span class="icon-twitter connection-links__icon"></span>Follow Us
+        </a>
+        <a href="https://www.facebook.com/" class="connection-links connection-links__text">
+          <span class="icon-facebook connection-links__icon"></span>Like Us
+        </a>
+        <a href="https://www.linkedin.com/" class="connection-links connection-links__text">
+          <span class="icon-linkedin connection-links__icon"></span>Connect
+        </a>
+      </div>
+    </aside> <!-- ends contact -->
     <footer>
       <p>&#169 Intelly LLC</p>
       <ul>
